# desafio_backend_2024

./: .env  .env.example  .eslintrc.js  .gitignore  Dockerfile  Dockerfile.migration  LICENSE  Procfile  README.md  docker-compose.yml  grafos.ipynb  ormconfig.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: node.js.yml  nodejs.yml
api/: Dockerfile  package-lock.json
app/: main.py
app/api/dependencies/: authentication.py
app/api/routes/: api.py  authentication.py  graphs.py  metrics.py  users.py
app/database/: database.py
app/routes/: api.py  graphs.py  login.py  metrics.py  users.py
app/schemas/: graphs.py  token.py  user.py
app/services/: auth.py  graphs.py  jwt.py  security.py
app/tests/: tests_graphs.py
db/: Dockerfile  typeorm.config.ts
db/migrations/: 1706886744484-CREATE_TABLES.ts
prisma/: schema.prisma
src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  datasource.ts  main.ts
src/config/: app.config.ts  database.config.ts
src/decorators/: param-id.decorator.ts  user.decorator.ts
src/entities/: graph.entity.ts  point.entity.ts  user.entity.ts
src/guards/: auth.guard.ts  role.guard.ts
src/interceptors/: log.interceptor.ts
src/middleware/: user-id-check.middleware.ts
src/migrations/: 1706844846229-ExecuteBackupSql.ts  db.sql
src/module/auth/: auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
src/module/graph/: graph.controller.spec.ts  graph.controller.ts  graph.module.ts  graph.service.ts  (+1 more)
tests/unit/: test_netgraphs.py
(+52 files in other folders)
